--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-transformers = "^4.41.2"
+transformers = "4.35"
 datasets = "^2.19.2"
 torch = "^2.3.1"
 soundfile = "^0.12.1"
@@ -20,6 +20,11 @@ ipykernel = "^6.29.4"
 librosa = "^0.10.2.post1"
 accelerate = "^0.31.0"
 torchaudio = "^2.3.1"
+evaluate = "^0.4.2"
+unidecode = "^1.3.8"
+peft = "^0.11.1"
+jiwer = "^3.0.4"
+bitsandbytes = "0.42"
 
 
 
