--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,14 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry]
 name = "SpeechExperiement"
 version = "0.1.0"
-description = ""
+description = "Few ASR usecases"
 authors = ["Matéo LEBRUN <mateo.lebrun@telecomnancy.net>"]
 readme = "README.md"
-packages = [{include = "src"}]
+packages = [{include = "src", from="whisper-streaming"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-transformers = "4.35"
+transformers = "^4.35"
 datasets = "^2.19.2"
 torch = "^2.3.1"
 soundfile = "^0.12.1"
@@ -25,8 +25,13 @@ unidecode = "^1.3.8"
 peft = "^0.11.1"
 jiwer = "^3.0.4"
 bitsandbytes = "0.42"
+faster-whisper = "^1.0.2"
 
 
 
 [tool.black]
 line-length = 79
+
+
+[tool.poetry.scripts]
+streaming = "src.transcript_stream:apply_transcription_streaming"
